--- a/Hybridize/CMakeLists.txt
+++ b/Hybridize/CMakeLists.txt
@@ -1,9 +1,9 @@
 ########### next target ###############
 
+file(GLOB header *.h)
+file(GLOB sources *.cpp)
 
-add_executable(HybridizeTest main.cpp )
-
-
+add_executable(HybridizeTest main.cpp ${sources} ${header})
 
 target_include_directories(HybridizeTest PUBLIC)
 
